--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,8 @@
 # Created by https://www.gitignore.io/api/netbeans
 
 ### NetBeans ###
-nbproject/
+nbproject
 nbproject/private/
-nbproject/project.properties
-nbproject/project.xml
 build/
 nbbuild/
 dist/
