--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 # Created by https://www.gitignore.io/api/netbeans
 
 ### NetBeans ###
-nbproject
-nbproject/private/
+nbproject/
 build/
 nbbuild/
 dist/
