--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,28 @@
 
-# Created by https://www.gitignore.io/api/netbeans
+# Created by https://www.gitignore.io/api/linux,netbeans
+
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
 
 ### NetBeans ###
-nbproject/*
+nbproject/private/
 build/
 nbbuild/
 dist/
 nbdist/
 .nb-gradle/
 
-# End of https://www.gitignore.io/api/netbeans
+# End of https://www.gitignore.io/api/linux,netbeans
 
